常見問題建置

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </svg>
                 <div class="col-lg-8 mx-auto py-2">
                     <!-- 最新狀態 -->
-                    <div class="alert alert-primary d-flex align-items-center justify-content-center mb-4 fs-6 fw-bold"
+                    <!-- <div class="alert alert-primary d-flex align-items-center justify-content-center mb-4 fs-6 fw-bold"
                         role="alert">
                         <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
                             <use xlink:href="#info-fill" />
@@ -74,7 +74,7 @@
                             6.11絕讚更新中目前還無法使用插件！
                             <a class="" href="https://discord.gg/3NMcUV5">更新通知可以加入Dalamud DC</a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- banner -->
                     <h1 class="display-4 fw-bold">Dalamud</h1>
                     <p class="lead mb-4">所有插件的基底，功能包含快速啟動與更新、第三方插件管理、記憶多組帳號密碼、上傳交易板價格資料至Universalis等多項功能</p>
