--- a/question.html
+++ b/question.html
@@ -29,6 +29,7 @@
     <meta property="twitter:title" content="亞馬烏羅提後花園">
     <meta property="twitter:description" content="Dalamud的各種研究筆記，包含FF14的第三方插件介紹與界面粗略翻譯。">
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
+
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
 
     <!-- CSS -->
@@ -40,22 +41,31 @@
     <link href="css/all.css" rel="stylesheet">
     <link href="css/all-sc.css" rel="stylesheet">
 
-    <title>Dalamud｜意見回報－亞馬烏羅提後花園</title>
-</head>
+    <title>Dalamud｜常見問題－亞馬烏羅提後花園</title>
 
+</head>
 
 <body>
     <!-- header -->
     <script src="head.js"></script>
-
     <!-- 內容 -->
-    <div class="container">
-        <div class="row google">
-            <iframe
-                src="https://docs.google.com/forms/d/e/1FAIpQLSfrhb9XL3G3ifq5cOvXsa7NmTjYVJ-vlJsG9K3dijv_WEXMDA/viewform?embedded=true"
-                width="100%" height="1300" scrolling="no" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+
+    <div>
+        <p style="margin: 100px; text-align: center; font-size: 10em;">建置中</p>
+    </div>
+    <div class="container my-4">
+        <div class="row">
+            <div class="col-md-10 mx-auto">
+                <h5>Q1. 打漢化畫面會糊掉</h5>
+                <img src="https://cdn.discordapp.com/attachments/967039551640055858/967039795635306546/unknown.png" alt="" class="img-fluid imagebigback">
+                <h5 class="mt-4">A1-1. 方法一</h5>
+                <p>Dalamud setting > Look & Feel > Font resolution level > 調整合適的解析度(有機率閃退)</p>
+                <h5>A1-2. 方法二</h5>
+                <p>一樣是 Look & Feel > Use AXIS fonts as default Dalamud font 打勾</p>
+            </div>
         </div>
     </div>
+
     <!-- footer -->
     <script src="footer.js"></script>
 
@@ -63,6 +73,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
