修次選單scroll bar、Penumbra預計更新

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item"><a href="plugins_cool.html#potato">全村拉拉肥</a></li>
                                 <li class="list-group-item"><a href="plugins_cool.html#Orchestrion">更換地圖BGM</a></li>
+                                <li class="list-group-item"><a href="plugins_cool.html#Penumbra">不用登出打mod</a></li>
 
                             </ul>
                         </div>
@@ -306,7 +307,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title fw-bold text-truncate">XIVLauncher - 加強遊戲體驗的多功能啟動器</h5>
                                     <p class="card-text text-truncate">看都沒人分享XIVLauncher / Dalamud相關文章
-                                        只好自己寫一篇了，順便當作推坑朋友時的教學文</p>
+                                    只好自己寫一篇了，順便當作推坑朋友時的教學文</p>
                                 </div>
                                 <div class="card-footer">
                                     <small class="text-muted">by 結標</small>
