--- a/plugins_cool.html
+++ b/plugins_cool.html
@@ -74,9 +74,18 @@
                             role="button">插件原網址</a>
                     </div>
                     <img src="https://github.com/ff-meli/OrchestrionPlugin/raw/master/gh/orch.gif" alt="" class="img-fluid imagebigback">
-                    <p>更換/顯示地圖BGM，捅自己刀用(編號871.898媽qaq)</p>
+                    <p>更換/顯示地圖BGM，捅自己刀用(編號871.898媽qaq) </br>
+                        <a href="https://docs.qq.com/sheet/DVURCZmhwc1pFbUt6?tab=BB08J2">歌曲翻譯對照表</a> 表格內的網站很實用的樣子.jpg</p>
                     <img src=" https://github.com/lmcintyre/OrchestrionPlugin/blob/main/images/image1.png?raw=true" alt="" class="img-fluid imagebigback">
-                   
+                </div>
+                <div class="commonFormat mt-5" id="Penumbra">
+                    <div class="plugintitle d-flex align-items-center mb-3">
+                        <h6 class="fs-4 d-inline mb-0 me-3">Penumbra</h6>
+                        <a href="https://github.com/xivdev/Penumbra" class="btn btn-outline-secondary"
+                            role="button">插件原網址</a>
+                    </div>
+                    <p>第三方庫，安裝路徑參見原網址 </br>
+                    在不退出遊戲的情況下打上mod，同時也可以關閉mod，支援導入mod包並可勾選選項(如果有的話)，</p>
                 </div>
             </div>
         </div>
