--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <!-- 固定寬度col-lg-10 -->
-            <div class="col-lg-10 mx-auto">
+            <div class="col-lg-10 mx-auto px-4">
                 <!-- 功能介紹卡片 -->
                 <div class="row justify-content-md-center py-5 function indexFormat" id="card_menu">
                     <div class="col-md-3 col-6 mb-3">
