--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
-
         gtag('config', 'G-4GK80CEHHB');
     </script>
     <meta charset="UTF-8">
@@ -40,6 +39,7 @@
 
     <link href="css/all.css" rel="stylesheet">
     <link href="css/all-sc.css" rel="stylesheet">
+    <script src="js/include.js"></script>
 
     <title>Dalamud / FF14插件－亞馬烏羅提後花園</title>
 
@@ -47,7 +47,7 @@
 
 <body>
     <!-- header -->
-    <script src="head.js"></script>
+    <div w3-include-html="head.html"></div>
     <!-- 內容 -->
     <div class="container-fluid">
         <div class="row">
@@ -355,7 +355,7 @@
     </div>
     </div>
     <!-- footer -->
-    <script src="footer.js"></script>
+    <div w3-include-html="footer.html"></div>
 
     <!-- JS插件 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
@@ -370,6 +370,9 @@
     <!-- jq -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 </html>
