--- a/question.html
+++ b/question.html
@@ -40,6 +40,7 @@
 
     <link href="css/all.css" rel="stylesheet">
     <link href="css/all-sc.css" rel="stylesheet">
+    <script src="js/include.js"></script>
 
     <title>Dalamud｜常見問題－亞馬烏羅提後花園</title>
 
@@ -47,7 +48,7 @@
 
 <body>
     <!-- header -->
-    <script src="head.js"></script>
+    <div w3-include-html="head.html"></div>
     <!-- 內容 -->
 
     <div>
@@ -67,7 +68,7 @@
     </div>
 
     <!-- footer -->
-    <script src="footer.js"></script>
+    <div w3-include-html="footer.html"></div>
 
     <!-- JS插件 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
@@ -82,6 +83,9 @@
     <!-- jq -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 </html>
