--- a/report.html
+++ b/report.html
@@ -39,6 +39,7 @@
 
     <link href="css/all.css" rel="stylesheet">
     <link href="css/all-sc.css" rel="stylesheet">
+    <script src="js/include.js"></script>
 
     <title>Dalamud｜意見回報－亞馬烏羅提後花園</title>
 </head>
@@ -46,7 +47,7 @@
 
 <body>
     <!-- header -->
-    <script src="head.js"></script>
+    <div w3-include-html="head.html"></div>
 
     <!-- 內容 -->
     <div class="container">
@@ -57,7 +58,7 @@
         </div>
     </div>
     <!-- footer -->
-    <script src="footer.js"></script>
+    <div w3-include-html="footer.html"></div>
 
     <!-- JS插件 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
@@ -71,6 +72,9 @@
     <!-- jq -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/index.js"></script>
+    <script>
+        includeHTML();
+    </script>
 </body>
 
 </html>
